--- a/svm/065_SVM_Exercises.ipynb
+++ b/svm/065_SVM_Exercises.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 195,
    "outputs": [],
    "source": [
     "%store -r train_data_set\n",
@@ -41,13 +41,10 @@
     "iris = load_iris()\n",
     "data_set = iris.data\n",
     "labels = iris.target\n",
-    "#\n",
-    "data_set = data_set[labels!=2]\n",
-    "labels = labels[labels!=2]\n",
-    "#\n",
-    "# train_data_set, test_data_set, train_labels, test_labels = train_test_split(\n",
-    "#     data_set, labels, test_size=0.2, random_state=15)\n",
-    "#\n",
+    "\n",
+    "# data_set = data_set[labels!=2]\n",
+    "# labels = labels[labels!=2]\n",
+    "\n",
     "labels[labels<1] = -1"
    ],
    "metadata": {
@@ -56,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 199,
    "outputs": [],
    "source": [
     "def choose_set_for_label(data_set, label):\n",
@@ -202,6 +199,8 @@
     "    for i in range(len(one_on_one_sets)):\n",
     "        ds = np.concatenate((label_dataset, one_on_one_sets[i]))\n",
     "        ls = np.concatenate((label_set_labels, one_on_one_labels[i]))\n",
+    "        ls[ls==ls.min()] = -1\n",
+    "        ls[ls==ls.max()] = 1\n",
     "        train_data_set, test_data_set, train_labels, test_labels = train_test_split(\n",
     "            ds, ls, test_size=0.2, random_state=15)\n",
     "        train_parameters.append((train_data_set, test_data_set, train_labels, test_labels))\n",
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 210,
    "outputs": [
     {
      "name": "stdout",
@@ -221,6 +220,7 @@
      "text": [
       "0\n",
       "1\n",
+      "2\n",
       "[[ 1. -1. -1.  1. -1.  1.  1. -1. -1. -1.  1.  1. -1.  1. -1.  1.  1.  1.\n",
       "   1. -1.  1. -1.  1.  1.  1.  1. -1.  1. -1.  1.  1.  1. -1. -1. -1. -1.\n",
       "  -1.  1.  1.  1.  1. -1. -1.  1. -1.  1.  1.  1. -1. -1.  1. -1. -1.  1.\n",
@@ -322,9 +322,115 @@
       " [2.38088355e-07]]\n",
       " svi = [ 8 10 44 47 54 56 63]\n",
       "len(lambdas) 7, b=-0.8534187606875376\n",
-      "[(0.85, -1, 1)]\n",
+      "[0--1, 0--2, 1--0, 1--2, 2--0, 2--1]\n",
+      "[0.85]\n",
+      "[[ 1. -1. -1.  1. -1.  1.  1. -1. -1. -1.  1.  1. -1.  1. -1.  1.  1.  1.\n",
+      "   1. -1.  1. -1.  1.  1.  1.  1. -1.  1. -1.  1.  1.  1. -1. -1. -1. -1.\n",
+      "  -1.  1.  1.  1.  1. -1. -1.  1. -1.  1.  1.  1. -1. -1.  1. -1. -1.  1.\n",
+      "   1. -1.  1.  1. -1. -1. -1. -1.  1. -1. -1.  1. -1. -1. -1. -1. -1.  1.\n",
+      "   1.  1. -1. -1. -1. -1. -1.  1.]]\n",
+      "A=1, P=80 G=80\n",
+      " h=1 b=0.0\n",
+      "     pcost       dcost       gap    pres   dres\n",
+      " 0:  1.0960e+02 -1.2787e+03  2e+03  1e-01  2e-15\n",
+      " 1:  6.2790e+01 -1.3211e+02  2e+02  6e-03  2e-15\n",
+      " 2:  7.3654e+00 -1.8102e+01  3e+01  2e-16  2e-15\n",
+      " 3: -7.5515e-01 -4.2288e+00  3e+00  3e-16  8e-16\n",
+      " 4: -1.4405e+00 -2.3676e+00  9e-01  2e-16  3e-16\n",
+      " 5: -1.7465e+00 -2.0630e+00  3e-01  4e-16  2e-16\n",
+      " 6: -1.8105e+00 -1.9114e+00  1e-01  2e-16  2e-16\n",
+      " 7: -1.8438e+00 -1.8684e+00  2e-02  2e-16  2e-16\n",
+      " 8: -1.8526e+00 -1.8544e+00  2e-03  2e-16  2e-16\n",
+      " 9: -1.8533e+00 -1.8534e+00  3e-05  2e-16  2e-16\n",
+      "10: -1.8534e+00 -1.8534e+00  3e-07  2e-16  2e-16\n",
+      "Optimal solution found.\n",
+      "[[2.68628547e-08]\n",
+      " [1.28661033e-08]\n",
+      " [1.26536111e-08]\n",
+      " [1.34398419e-08]\n",
+      " [1.41072718e-08]\n",
+      " [4.11016900e-01]\n",
+      " [2.70637499e-08]\n",
+      " [1.06109861e-08]\n",
+      " [1.13497638e-01]\n",
+      " [1.26581772e-08]\n",
+      " [1.10858973e-08]\n",
+      " [1.94287291e-01]\n",
+      " [2.17347282e-08]\n",
+      " [1.75924439e-08]\n",
+      " [1.02960226e-08]\n",
+      " [1.73236642e-08]\n",
+      " [1.47575004e-08]\n",
+      " [3.49866251e-07]\n",
+      " [1.46801480e-08]\n",
+      " [2.62972920e-08]\n",
+      " [8.95251010e-09]\n",
+      " [1.03425142e-08]\n",
+      " [6.24331785e-06]\n",
+      " [1.98776211e-08]\n",
+      " [3.50251919e-08]\n",
+      " [1.84499259e-08]\n",
+      " [9.91503930e-09]\n",
+      " [3.60469049e-07]\n",
+      " [1.92070824e-08]\n",
+      " [1.16866185e-08]\n",
+      " [1.17744352e-08]\n",
+      " [6.68874524e-07]\n",
+      " [2.75530160e-08]\n",
+      " [1.14658718e-08]\n",
+      " [9.12982323e-09]\n",
+      " [1.00037583e-08]\n",
+      " [1.03945120e-08]\n",
+      " [2.77515830e-08]\n",
+      " [2.95998674e-08]\n",
+      " [1.28673224e-08]\n",
+      " [1.20758166e-01]\n",
+      " [1.38121875e-07]\n",
+      " [9.38775573e-09]\n",
+      " [1.30747489e-08]\n",
+      " [8.25400715e-01]\n",
+      " [1.55908845e-08]\n",
+      " [3.41942667e-08]\n",
+      " [1.58411651e-01]\n",
+      " [9.62323636e-09]\n",
+      " [8.90182736e-09]\n",
+      " [4.15811120e-08]\n",
+      " [1.00592669e-08]\n",
+      " [9.05408517e-09]\n",
+      " [5.49832727e-01]\n",
+      " [4.31138279e-08]\n",
+      " [1.17463726e-08]\n",
+      " [4.44870712e-08]\n",
+      " [3.40439089e-08]\n",
+      " [1.73403176e-08]\n",
+      " [1.06143453e-08]\n",
+      " [1.22145852e-08]\n",
+      " [9.03328105e-09]\n",
+      " [4.19041838e-01]\n",
+      " [9.14457874e-01]\n",
+      " [1.10594500e-08]\n",
+      " [1.18277672e-08]\n",
+      " [2.32839439e-08]\n",
+      " [9.76546402e-09]\n",
+      " [1.02383068e-08]\n",
+      " [8.77247901e-09]\n",
+      " [1.29852650e-08]\n",
+      " [1.28140862e-08]\n",
+      " [1.11853098e-08]\n",
+      " [3.01867537e-08]\n",
+      " [9.31201523e-09]\n",
+      " [9.31117013e-09]\n",
+      " [9.22482248e-09]\n",
+      " [1.30207560e-08]\n",
+      " [1.15260924e-08]\n",
+      " [2.46118502e-08]]\n",
+      " svi = [ 5  8 11 40 44 47 53 62 63]\n",
+      "len(lambdas) 9, b=-2.5069975699614506\n",
+      "[0--1, 0--2, 1--0, 1--2, 2--0, 2--1]\n",
+      "[0.85, 0.45]\n",
       "0\n",
       "1\n",
+      "2\n",
       "[[-1.  1.  1. -1.  1. -1. -1.  1.  1.  1. -1. -1.  1. -1.  1. -1. -1. -1.\n",
       "  -1.  1. -1.  1. -1. -1. -1. -1.  1. -1.  1. -1. -1. -1.  1.  1.  1.  1.\n",
       "   1. -1. -1. -1. -1.  1.  1. -1.  1. -1. -1. -1.  1.  1. -1.  1.  1. -1.\n",
@@ -425,9 +531,326 @@
       " [1.42445910e-08]\n",
       " [4.83979870e-08]\n",
       " [1.33718362e-01]]\n",
-      " svi = [ 2 19 40 46 48 64 76 79]\n",
-      "len(lambdas) 8, b=-1.7387907276509789\n",
-      "[(0.85, -1, 1), (0.55, 1, -1)]\n"
+      " svi = [ 2 19 40 46 64 76 79]\n",
+      "len(lambdas) 7, b=-0.8537533281996813\n",
+      "[0--1, 0--2, 1--0, 1--2, 2--0, 2--1]\n",
+      "[0.85, 0.45, 0.85]\n",
+      "[[ 1. -1. -1.  1. -1.  1.  1. -1. -1. -1.  1.  1. -1.  1. -1.  1.  1.  1.\n",
+      "   1. -1.  1. -1.  1.  1.  1.  1. -1.  1. -1.  1.  1.  1. -1. -1. -1. -1.\n",
+      "  -1.  1.  1.  1.  1. -1. -1.  1. -1.  1.  1.  1. -1. -1.  1. -1. -1.  1.\n",
+      "   1. -1.  1.  1. -1. -1. -1. -1.  1. -1. -1.  1. -1. -1. -1. -1. -1.  1.\n",
+      "   1.  1. -1. -1. -1. -1. -1.  1.]]\n",
+      "A=1, P=80 G=80\n",
+      " h=1 b=0.0\n",
+      "     pcost       dcost       gap    pres   dres\n",
+      " 0:  8.4860e+01 -1.3263e+03  3e+03  2e-01  2e-15\n",
+      " 1:  5.7011e+01 -1.1832e+02  2e+02  5e-03  2e-15\n",
+      " 2:  7.1294e+00 -1.6018e+01  2e+01  2e-16  2e-15\n",
+      " 3: -4.3414e-01 -3.6152e+00  3e+00  3e-16  1e-15\n",
+      " 4: -1.1330e+00 -1.7022e+00  6e-01  2e-16  3e-16\n",
+      " 5: -1.2580e+00 -1.4691e+00  2e-01  2e-16  2e-16\n",
+      " 6: -1.3321e+00 -1.4470e+00  1e-01  2e-16  2e-16\n",
+      " 7: -1.3584e+00 -1.3700e+00  1e-02  2e-16  2e-16\n",
+      " 8: -1.3632e+00 -1.3635e+00  3e-04  2e-16  2e-16\n",
+      " 9: -1.3633e+00 -1.3633e+00  5e-06  2e-16  2e-16\n",
+      "10: -1.3633e+00 -1.3633e+00  5e-08  2e-16  2e-16\n",
+      "Optimal solution found.\n",
+      "[[1.25152201e-09]\n",
+      " [2.37152198e-09]\n",
+      " [1.06704644e-08]\n",
+      " [1.03527161e-09]\n",
+      " [3.61951421e-09]\n",
+      " [1.35167193e-01]\n",
+      " [1.06238390e-09]\n",
+      " [2.20747494e-09]\n",
+      " [2.94327459e-09]\n",
+      " [6.24747019e-09]\n",
+      " [6.20400246e-10]\n",
+      " [1.47544445e-08]\n",
+      " [3.76709536e-07]\n",
+      " [1.51857234e-09]\n",
+      " [3.73083443e-09]\n",
+      " [7.69530598e-10]\n",
+      " [5.40533479e-10]\n",
+      " [2.00703775e-01]\n",
+      " [6.85205969e-10]\n",
+      " [1.06155509e-08]\n",
+      " [5.66598437e-10]\n",
+      " [5.69021486e-01]\n",
+      " [3.05626032e-09]\n",
+      " [1.85637567e-09]\n",
+      " [7.06075670e-10]\n",
+      " [6.67106297e-10]\n",
+      " [4.98191588e-09]\n",
+      " [2.59983269e-01]\n",
+      " [5.49041529e-09]\n",
+      " [8.69687493e-10]\n",
+      " [7.40280030e-10]\n",
+      " [3.88971347e-09]\n",
+      " [2.34420725e-09]\n",
+      " [1.32965015e-09]\n",
+      " [4.88523068e-09]\n",
+      " [2.60705265e-09]\n",
+      " [7.08670057e-08]\n",
+      " [6.93753545e-10]\n",
+      " [7.42020216e-10]\n",
+      " [6.51393146e-10]\n",
+      " [7.11700480e-10]\n",
+      " [8.25081038e-09]\n",
+      " [6.07174853e-09]\n",
+      " [9.93108660e-10]\n",
+      " [2.89798490e-09]\n",
+      " [1.06805224e-09]\n",
+      " [9.05059758e-10]\n",
+      " [1.23727611e-01]\n",
+      " [3.61498784e-08]\n",
+      " [4.53643601e-09]\n",
+      " [8.04965404e-10]\n",
+      " [3.52309648e-09]\n",
+      " [2.12455637e-09]\n",
+      " [1.42712312e-01]\n",
+      " [9.04668970e-10]\n",
+      " [5.34511533e-09]\n",
+      " [6.29927826e-10]\n",
+      " [7.60346795e-10]\n",
+      " [2.22217634e-09]\n",
+      " [2.35632434e-09]\n",
+      " [2.01644577e-07]\n",
+      " [1.79893032e-09]\n",
+      " [5.01053458e-01]\n",
+      " [1.15900549e-08]\n",
+      " [3.07035593e-01]\n",
+      " [5.60724115e-10]\n",
+      " [2.37563082e-09]\n",
+      " [7.40154741e-09]\n",
+      " [2.77103272e-09]\n",
+      " [5.40795311e-09]\n",
+      " [3.37383326e-09]\n",
+      " [8.95227536e-10]\n",
+      " [6.09870595e-10]\n",
+      " [2.43657006e-09]\n",
+      " [1.36428044e-09]\n",
+      " [2.19948843e-09]\n",
+      " [4.87286668e-01]\n",
+      " [4.21553707e-09]\n",
+      " [3.09200964e-06]\n",
+      " [1.80234677e-09]]\n",
+      " svi = [ 5 17 21 27 47 53 62 64 76]\n",
+      "len(lambdas) 9, b=-2.626162333156121\n",
+      "[0--1, 0--2, 1--0, 1--2, 2--0, 2--1]\n",
+      "[0.85, 0.45, 0.85, 0.45]\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "[[-1.  1.  1. -1.  1. -1. -1.  1.  1.  1. -1. -1.  1. -1.  1. -1. -1. -1.\n",
+      "  -1.  1. -1.  1. -1. -1. -1. -1.  1. -1.  1. -1. -1. -1.  1.  1.  1.  1.\n",
+      "   1. -1. -1. -1. -1.  1.  1. -1.  1. -1. -1. -1.  1.  1. -1.  1.  1. -1.\n",
+      "  -1.  1. -1. -1.  1.  1.  1.  1. -1.  1.  1. -1.  1.  1.  1.  1.  1. -1.\n",
+      "  -1. -1.  1.  1.  1.  1.  1. -1.]]\n",
+      "A=1, P=79 G=80\n",
+      " h=1 b=0.0\n",
+      "     pcost       dcost       gap    pres   dres\n",
+      " 0:  1.1000e+02 -1.2773e+03  2e+03  1e-01  2e-15\n",
+      " 1:  6.2642e+01 -1.3043e+02  2e+02  5e-03  2e-15\n",
+      " 2:  7.2840e+00 -1.8046e+01  3e+01  5e-16  2e-15\n",
+      " 3: -7.7189e-01 -4.2193e+00  3e+00  5e-16  8e-16\n",
+      " 4: -1.4490e+00 -2.3784e+00  9e-01  2e-16  3e-16\n",
+      " 5: -1.7373e+00 -2.0546e+00  3e-01  4e-16  2e-16\n",
+      " 6: -1.8080e+00 -1.9019e+00  9e-02  3e-16  2e-16\n",
+      " 7: -1.8428e+00 -1.8703e+00  3e-02  2e-16  2e-16\n",
+      " 8: -1.8510e+00 -1.8540e+00  3e-03  2e-16  2e-16\n",
+      " 9: -1.8521e+00 -1.8522e+00  6e-05  2e-16  2e-16\n",
+      "10: -1.8521e+00 -1.8521e+00  6e-07  2e-16  2e-16\n",
+      "Optimal solution found.\n",
+      "[[2.07253978e-08]\n",
+      " [3.33435757e-08]\n",
+      " [2.08441832e-08]\n",
+      " [2.93498536e-08]\n",
+      " [5.48206328e-01]\n",
+      " [2.28429644e-08]\n",
+      " [2.70907314e-08]\n",
+      " [2.65636941e-08]\n",
+      " [4.18554349e-08]\n",
+      " [3.14119654e-08]\n",
+      " [2.85606920e-08]\n",
+      " [2.40253220e-08]\n",
+      " [4.18893338e-01]\n",
+      " [6.00801690e-08]\n",
+      " [2.00981997e-08]\n",
+      " [2.87789542e-08]\n",
+      " [2.05697647e-08]\n",
+      " [5.37027354e-07]\n",
+      " [2.84308268e-08]\n",
+      " [9.39364272e-08]\n",
+      " [2.72332431e-08]\n",
+      " [1.14200694e-05]\n",
+      " [2.34511296e-08]\n",
+      " [8.59371560e-08]\n",
+      " [2.01346421e-08]\n",
+      " [2.78672849e-08]\n",
+      " [3.83809082e-08]\n",
+      " [1.98479122e-08]\n",
+      " [2.53714226e-08]\n",
+      " [2.29268398e-08]\n",
+      " [2.46839436e-08]\n",
+      " [3.08496410e-08]\n",
+      " [3.76453375e-08]\n",
+      " [1.93827003e-08]\n",
+      " [2.79957919e-08]\n",
+      " [2.26474514e-08]\n",
+      " [2.68494591e-08]\n",
+      " [2.28047566e-08]\n",
+      " [2.18373400e-08]\n",
+      " [4.70433942e-08]\n",
+      " [8.97209690e-01]\n",
+      " [5.65636172e-08]\n",
+      " [2.12154948e-08]\n",
+      " [5.50220015e-08]\n",
+      " [1.20650720e-01]\n",
+      " [3.10761151e-08]\n",
+      " [9.14485325e-01]\n",
+      " [2.10099301e-08]\n",
+      " [7.21094663e-06]\n",
+      " [6.10626408e-08]\n",
+      " [6.53281238e-08]\n",
+      " [3.76453375e-08]\n",
+      " [5.15189592e-08]\n",
+      " [3.43000626e-08]\n",
+      " [6.24045276e-08]\n",
+      " [4.41551336e-08]\n",
+      " [2.50757114e-08]\n",
+      " [2.11329435e-08]\n",
+      " [1.39416349e-08]\n",
+      " [1.94787443e-01]\n",
+      " [3.65150765e-08]\n",
+      " [2.79946446e-08]\n",
+      " [4.99127605e-08]\n",
+      " [4.44452467e-08]\n",
+      " [8.07462765e-08]\n",
+      " [2.71553803e-08]\n",
+      " [2.41975668e-08]\n",
+      " [5.24622347e-08]\n",
+      " [4.10924161e-01]\n",
+      " [5.65325374e-07]\n",
+      " [3.49803338e-08]\n",
+      " [2.39051150e-08]\n",
+      " [2.42586224e-08]\n",
+      " [2.15217237e-08]\n",
+      " [6.24708748e-08]\n",
+      " [2.47319418e-08]\n",
+      " [1.58667158e-01]\n",
+      " [3.04270365e-08]\n",
+      " [2.36226935e-08]\n",
+      " [4.04528600e-02]]\n",
+      " svi = [ 4 12 40 44 46 59 68 76 79]\n",
+      "len(lambdas) 9, b=-2.506885456008538\n",
+      "[0--1, 0--2, 1--0, 1--2, 2--0, 2--1]\n",
+      "[0.85, 0.45, 0.85, 0.45, 0.55]\n",
+      "[[-1.  1.  1. -1.  1. -1. -1.  1.  1.  1. -1. -1.  1. -1.  1. -1. -1. -1.\n",
+      "  -1.  1. -1.  1. -1. -1. -1. -1.  1. -1.  1. -1. -1. -1.  1.  1.  1.  1.\n",
+      "   1. -1. -1. -1. -1.  1.  1. -1.  1. -1. -1. -1.  1.  1. -1.  1.  1. -1.\n",
+      "  -1.  1. -1. -1.  1.  1.  1.  1. -1.  1.  1. -1.  1.  1.  1.  1.  1. -1.\n",
+      "  -1. -1.  1.  1.  1.  1.  1. -1.]]\n",
+      "A=1, P=79 G=80\n",
+      " h=1 b=0.0\n",
+      "     pcost       dcost       gap    pres   dres\n",
+      " 0:  8.2982e+01 -1.3553e+03  3e+03  2e-01  2e-15\n",
+      " 1:  5.7710e+01 -1.2346e+02  2e+02  5e-03  2e-15\n",
+      " 2:  7.4413e+00 -1.6311e+01  2e+01  7e-16  2e-15\n",
+      " 3: -3.7480e-01 -3.6480e+00  3e+00  3e-16  1e-15\n",
+      " 4: -1.0935e+00 -1.8184e+00  7e-01  2e-16  3e-16\n",
+      " 5: -1.2542e+00 -1.4530e+00  2e-01  2e-16  2e-16\n",
+      " 6: -1.3187e+00 -1.4600e+00  1e-01  2e-16  1e-16\n",
+      " 7: -1.3524e+00 -1.3668e+00  1e-02  2e-16  1e-16\n",
+      " 8: -1.3582e+00 -1.3611e+00  3e-03  2e-16  2e-16\n",
+      " 9: -1.3596e+00 -1.3600e+00  4e-04  2e-16  2e-16\n",
+      "10: -1.3598e+00 -1.3598e+00  5e-06  3e-16  2e-16\n",
+      "11: -1.3598e+00 -1.3598e+00  5e-08  2e-16  2e-16\n",
+      "Optimal solution found.\n",
+      "[[2.90103129e-09]\n",
+      " [2.59402330e-09]\n",
+      " [1.90544687e-09]\n",
+      " [4.00488836e-09]\n",
+      " [2.50100746e-01]\n",
+      " [3.60778769e-09]\n",
+      " [3.30294113e-09]\n",
+      " [1.97474714e-09]\n",
+      " [1.02442421e-08]\n",
+      " [1.88266843e-09]\n",
+      " [1.13003009e-08]\n",
+      " [3.03839059e-09]\n",
+      " [4.99045977e-01]\n",
+      " [6.52500180e-09]\n",
+      " [1.99975381e-09]\n",
+      " [2.31119427e-08]\n",
+      " [2.73500554e-09]\n",
+      " [4.20058033e-09]\n",
+      " [5.54918932e-09]\n",
+      " [2.13465510e-09]\n",
+      " [5.45461109e-09]\n",
+      " [9.00987586e-09]\n",
+      " [5.86897568e-01]\n",
+      " [2.99047240e-09]\n",
+      " [7.29107897e-09]\n",
+      " [5.11477566e-09]\n",
+      " [2.64609729e-09]\n",
+      " [4.23716628e-09]\n",
+      " [1.90301296e-09]\n",
+      " [4.17597407e-09]\n",
+      " [3.11235833e-09]\n",
+      " [5.27286413e-09]\n",
+      " [4.51561499e-09]\n",
+      " [1.58216464e-09]\n",
+      " [2.05098912e-09]\n",
+      " [2.47477346e-09]\n",
+      " [2.45851909e-09]\n",
+      " [4.35177466e-09]\n",
+      " [5.27806330e-09]\n",
+      " [5.79359690e-09]\n",
+      " [3.79534351e-09]\n",
+      " [4.34372099e-09]\n",
+      " [2.50915964e-09]\n",
+      " [3.07011027e-09]\n",
+      " [3.02547540e-09]\n",
+      " [3.29208008e-09]\n",
+      " [2.06702130e-08]\n",
+      " [4.96194902e-01]\n",
+      " [7.78680094e-08]\n",
+      " [2.00790555e-09]\n",
+      " [3.95742354e-09]\n",
+      " [4.51561499e-09]\n",
+      " [3.10343564e-09]\n",
+      " [5.94516351e-09]\n",
+      " [7.73527451e-09]\n",
+      " [1.90459604e-09]\n",
+      " [2.44582790e-01]\n",
+      " [3.27224887e-09]\n",
+      " [3.35263307e-09]\n",
+      " [9.89562378e-09]\n",
+      " [2.07361284e-09]\n",
+      " [1.76465407e-09]\n",
+      " [3.21236400e-02]\n",
+      " [3.32080571e-09]\n",
+      " [2.10457124e-09]\n",
+      " [1.59464732e-07]\n",
+      " [3.01410558e-09]\n",
+      " [2.08783689e-09]\n",
+      " [1.71851549e-01]\n",
+      " [1.90125966e-01]\n",
+      " [1.93930511e-09]\n",
+      " [5.82657771e-08]\n",
+      " [8.16397538e-09]\n",
+      " [4.06889064e-09]\n",
+      " [2.14765837e-09]\n",
+      " [2.67255400e-09]\n",
+      " [2.48674886e-01]\n",
+      " [2.51788765e-09]\n",
+      " [1.74243347e-09]\n",
+      " [6.51509331e-09]]\n",
+      " svi = [ 4 12 22 47 56 62 68 69 76]\n",
+      "len(lambdas) 9, b=-0.8844350539055691\n",
+      "[0--1, 0--2, 1--0, 1--2, 2--0, 2--1]\n",
+      "[0.85, 0.45, 0.85, 0.45, 0.55, 0.55]\n"
      ]
     }
    ],
@@ -442,11 +865,11 @@
     "    for parameter in train_parameters:\n",
     "        train_data_set, test_data_set, train_labels, test_labels = parameter\n",
     "        objects_count = len(train_labels)\n",
-    "        lambdas, support_vectors, support_vectors_id, b, targets, vector_number = train(train_data_set, train_labels, kernel_type='rbf')\n",
+    "        lambdas, support_vectors, support_vectors_id, b, targets, vector_number = train(train_data_set, train_labels, kernel_type='rbf', threshold=1e-04)\n",
     "        predicted = classify_rbf(test_data_set, train_data_set, lambdas, targets, b, vector_number, support_vectors, support_vectors_id)\n",
     "        predicted = list(predicted.astype(int))\n",
-    "        scores.append((accuracy_score(predicted, test_labels), i, test_labels[0]))\n",
-    "        print(scores)"
+    "        scores.append(accuracy_score(predicted, test_labels))\n",
+    "        print(f'[0--1, 0--2, 1--0, 1--2, 2--0, 2--1]\\n{scores}')"
    ],
    "metadata": {
     "collapsed": false
