all nlp excercises done

--- a/nlp/106_NLP_Exercises.ipynb
+++ b/nlp/106_NLP_Exercises.ipynb
@@ -42,6 +42,7 @@
     }
    ],
    "source": [
+    "import collections\n",
     "from typing import List\n",
     "import re\n",
     "\n",
@@ -238,21 +239,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 1 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0 0 1 1 1 1 1 1 1 1 1]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "34"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import spacy\n",
+    "import collections\n",
     "\n",
     "class BagOfWords:\n",
     "    \"\"\"Basic BoW implementation.\"\"\"\n",
     "    \n",
     "    __nlp = spacy.load(\"en_core_web_sm\")\n",
     "    __bow_list = []\n",
-    "    \n",
-    "    # your code goes maybe also here    \n",
-    "    \n",
+    "    frequency_vector = {}\n",
+    "\n",
+    "    def normalize(self, corpus: list):\n",
+    "        pattern = f'[^0-9a-zA-Z]+'\n",
+    "        return [re.sub(pattern, ' ', elem.lower()).strip() for elem in corpus]\n",
+    "\n",
     "    def fit_transform(self, corpus: list):\n",
     "        \"\"\"Transform list of strings into BoW array.\n",
     "\n",
@@ -267,8 +292,15 @@
     "                Matrix representation of BoW\n",
     "\n",
     "        \"\"\"\n",
-    "        # your code goes here        \n",
-    "        return None\n",
+    "        self.normalize(corpus)\n",
+    "        self.frequency_vector = collections.Counter()\n",
+    "        for sentence in corpus:\n",
+    "            tokens = tokenize_words(sentence)\n",
+    "            self.frequency_vector.update(tokens)\n",
+    "\n",
+    "        sentence_vectors = [[1 if word in tokenize_words(sentence) else 0 for word, _ in self.frequency_vector.items()] for sentence in corpus]\n",
+    "        sentence_vectors = np.asarray(sentence_vectors)\n",
+    "        return sentence_vectors\n",
     "      \n",
     "\n",
     "    def get_feature_names(self) -> list:\n",
@@ -279,9 +311,8 @@
     "        List[str]\n",
     "                Words being transformed by fit function\n",
     "\n",
-    "        \"\"\"   \n",
-    "        # your code goes here\n",
-    "        return None\n",
+    "        \"\"\"\n",
+    "        return list(self.frequency_vector.items())\n",
     "\n",
     "corpus = [\n",
     "     'Bag Of Words is based on counting',\n",
@@ -316,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +356,7 @@
     "wall_street = text7.tokens\n",
     "\n",
     "import re\n",
+    "import random\n",
     "\n",
     "tokens = wall_street\n",
     "\n",
@@ -373,22 +405,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have to be more like the department store not the boutique . IRAs . SHAREDATA Inc. said 0 it plans to begin delivery in the first quarter of 1990 . In October before the market dropped Mrs.\n",
+      "\n",
+      "was changed to:\n",
+      "\n",
+      "we have to be more like the department store not the boutique. IRAs. SHAREDATA Inc. Said 0 it plans to begin delivery in the first quarter of 1990. In October before the market dropped Mrs.\n"
+     ]
+    }
+   ],
    "source": [
-    "def clean_generated():\n",
-    "    # put your code here\n",
-    "    pass\n",
+    "def clean_generated(text):\n",
+    "    result = re.compile(r'(?<=[.?!])\\s+([a-zA-Z])', re.M).sub(lambda x: x.group().upper(), text)\n",
+    "    return re.compile(r' \\.').sub('.', result)\n",
     "\n",
-    "N=3 # fix it for other value of N\n",
+    "\n",
+    "N=5 # fix it for other value of N\n",
     "\n",
     "SEP=\" \"\n",
     "\n",
     "sentence_count=5\n",
     "\n",
     "ngrams = build_ngrams()\n",
-    "start_seq=\"We have\"\n",
+    "start_seq=\"We have to be\"\n",
     "\n",
     "counts = ngram_freqs(ngrams)\n",
     "\n",
@@ -399,10 +444,11 @@
     "while sentences < sentence_count:\n",
     "    generated += SEP + next_word(generated, N, counts)\n",
     "    sentences += 1 if generated.endswith(('.','!', '?')) else 0\n",
+    "print(generated)\n",
     "\n",
-    "# put your code here:\n",
+    "generated = clean_generated(generated)\n",
     "\n",
-    "print(generated)"
+    "print(f'\\nwas changed to:\\n\\n{generated}')"
    ]
   }
  ],
